--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ body {
   overflow: hidden; /* prevents elements to visually exit the game-box */
   user-select: none; /* prevents elements inside the game-box to be highlighted. This improves the user experience for click events on the game-box */
 
-  background-image: url("/Assets/images/Background/RainVilageBkgd.png");
+  background-image: url("../Assets/images/Background/RainVilageBkgd.png");
   background-size: contain;
 
 }
