--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ body {
   margin-top: 80px;
 
   position: relative; /* allows us to position inner elements (absolute) related the the game-box */
-  overflow: hidden; /* prevents elements to visually exit the game-box */
+/* overflow: hidden; /* prevents elements to visually exit the game-box */
   user-select: none; /* prevents elements inside the game-box to be highlighted. This improves the user experience for click events on the game-box */
 
   background-image: url("../Assets/images/Background/RainVilageBkgd.png");
